# dcalalan_cs348_project

./: .gitignore  README.md  app.py  pyproject.toml
dcalalan_cs348_project/: database.py  main.py  models.py
dcalalan_cs348_project/html_files/: basic.html  chosen_playlist.html  main.html  playlist.html  playlist_access.html  playlist_main.html  root.html
html_files/: index.html
