[tool.poetry]
name = "dcalalan-cs348-project"
version = "0.1.0"
description = ""
authors = ["DavidCalalang <dcalalan@purdue.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
pymysql = "^1.1.1"
pandas = "^2.2.3"
duckdb = "^1.1.2"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
